clean up some unused vars